--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,3 +2,21 @@ body {
   margin: 0;
   background-color: lightcoral;
 }
+
+@media screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+}
+
+@media screen and (min-width: 601px) and (max-width: 1024px) {
+  body {
+    background-color: lightgreen;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  body {
+    background-color: lightcoral;
+  }
+}
